Reset to develop